# money-tracker

./: .badge-config  .copilot_icon_usage.txt  .gitignore  .release-please-manifest.json  AccountsScreen.js  App.js  CHANGELOG.md  CLAUDE.md  FIXES_SUMMARY.md  LocalizationContext.js  MIGRATION_FIX.md  README.md  SKILL.md  SettingsModal.js  TEST_STRATEGY.md  WEB_SETUP.md  app.config.js  app.json  drizzle.config.js  eas-build-gradle.properties  eas.json  eslint.config.js  gradle.properties  index.js  jest-env.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  proguard-rules.pro  react-native.config.js  release-please-config.json  skills-lock.json  webpack.config.js
.claude/: feature-backlog.md  settings.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.maestro/: local-screenshots.yaml  take-screenshots.yaml
__tests__/: App.test.js  TEST_COVERAGE_PLAN.md  ci-gate-verification.test.js
android/: sentry.properties  settings.gradle
app/: ARCHITECTURE-REVIEW.md  AccountsContext.js  AccountsScreen.js  App.js  AppInitializer.js  BudgetModal.js  BudgetsContext.js  Calculator.js  CategoriesContext.js  CategoriesScreen.js  CategoryModal.js  DialogContext.js  GooglePayContext.js  GraphsScreen.js  Header.js  LanguageSelectionScreen.js  LocalizationContext.js  MaterialDialog.js  OperationModal.js  OperationsContext.js  OperationsScreen.js  README.md  SettingsModal.js  SimpleTabs.js  ThemeContext.js  package-lock.json  package.json  picker-styles.web.js  useMaterialTheme.js
scripts/cmake-stubs/: CMakeLists.txt
(+586 files in other folders)
